Dawin is now reported to work.
cleanmetas now inserts a \ when it finds a ' so we get the proper
values in our .info files when read by a shell.
Add new CFLAGS to ensure that the code quality is good.
Use const more in public functions.

dhcpcd-3.0.6
Don't set the broadcast flag anymore as all BPF and Linux sockets should be
able to unicast correctly.

dhcpcd-3.0.5
Fix yp.conf creation.

dhcpcd-3.0.4
Fix netmask thanks to Marc Duponcheel.
Send the hostname by default unless null, (none) or localhost.
This can be overridden by using a an empty option for -h (-h '').

dhcpcd-3.0.3
NIS setup (yp.conf / domainname) works again.
Send hostname/fqdn in DISCOVER and INFORM messages too.
Add more debug messages.
Fix writing to resolv.conf when resolvconf not present.
Include linux/if_addr.h for 2.6.19+ kernels, thanks to AlexExtreme.

dhcpcd-3.0.2
Linux systems without glibc-2.3 don't have getifaddrs, so we define our own.
Changed the default timeout to 20 seconds, allowing hme Sparc drivers to work.
Set the rfds correctly so we can get a reply after re-sending a request.
Set the seconds elasped and maximum message size correctly in DHCP messages.
Now compiles on Linux 2.4 kernels. 
xmalloc dhcp objects so we can swap the pointers around easily.

dhcpcd-3.0.1
Quote all vars in the info file.
-n and -G options now work as stated in the man page.
Handle select loops with large timeouts and infinite lease times.
Correctly set the broadcast flag.
make_dhcp_packet already has byte ordered addresses, thanks to TGL
for the fix.
If we get a NAK then always re-enter the INIT state.

dhcpcd-3.0.0
A complete rewrite by Roy Marples <uberlord@gentoo.org>

Functional changes since version 2:
We now support FreeBSD as well as Linux.
RFC 3004 User Class support has been added.
RFC 3442 Classless Static Routes support has been added
(thanks to apexman for helping).
Options -r, -e, -v, -w, -B, -C, -D, -L, -S have been dropped.
-a now means "do arp" instead of "don't arp".